[gd_scene load_steps=4 format=3 uid="uid://bocp8qvswpmwp"]

[ext_resource type="Script" path="res://games/game.gd" id="1_ryaub"]
[ext_resource type="PackedScene" uid="uid://dlffb5c3kdiei" path="res://games/player.tscn" id="2_7mv5o"]
[ext_resource type="PackedScene" uid="uid://bh7jdahdwknic" path="res://games/ancient_tree.tscn" id="3_xq44r"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ryaub")

[node name="PauseMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.473976, 0.473976, 0.473976, 1)

[node name="PausedLabel" type="Label" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Paused"

[node name="ResumeButton" type="Button" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 36.0
offset_right = 88.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="LobbyButton" type="Button" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 91.0
offset_right = 88.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Lobby"

[node name="ExitButton" type="Button" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 148.0
offset_right = 88.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="TemporaryMenu" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="TemporaryMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Coming Soon"

[node name="BacktoLobby" type="Button" parent="TemporaryMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 60.0
offset_right = 64.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Back To Lobby
"

[node name="Player" parent="." instance=ExtResource("2_7mv5o")]
position = Vector2(568, 320)

[node name="AncientTree" parent="." instance=ExtResource("3_xq44r")]
position = Vector2(568, 288)

[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="TemporaryMenu/BacktoLobby" to="." method="_on_backto_lobby_pressed"]
